--- a/project/src/main/resources/templates/manageAccount.html
+++ b/project/src/main/resources/templates/manageAccount.html
@@ -27,18 +27,18 @@
             <h2>Danh sách tài khoản</h2>
             <div class="search">
                 <div class="col-xl-4">
-                    <div class="search-line">
+                    <div class="search-line" id="searchByUsername">
                         <span>Tên đăng nhập</span>
                         <input type="text" placeholder="Tên đăng nhập">
                     </div>
                     <div class="search-line">
                         <span>Sắp xếp theo</span>
-                        <div class="searchable">
+                        <div class="searchable" id="sortBy">
                             <input type="text" placeholder="Sắp xếp theo" onkeyup="filterFunction(this,event)">
                             <ul>
-                                <li>Tên đăng nhập</li>
-                                <li>Họ và tên</li>
-                                <li>Lớp</li>
+                                <li value="1">Tên đăng nhập</li>
+                                <li value="2">Họ và tên</li>
+                                <li value="3">Lớp</li>
                             </ul>
                         </div>
                     </div>
@@ -47,7 +47,7 @@
                 <div class="col-xl-4">
                     <div class="search-line">
                         <span>Chức vụ</span>
-                        <div class="searchable">
+                        <div class="searchable" id="role-name">
                             <input type="text" placeholder="Chức vụ"
                                    onkeyup="filterFunction(this,event)">
                             <ul id="search-role">
@@ -56,19 +56,19 @@
                     </div>
                     <div class="search-line">
                         <span>Thứ tự</span>
-                        <div class="searchable">
+                        <div class="searchable" id="sort">
                             <input type="text" placeholder="Thứ tự" onkeyup="filterFunction(this,event)">
                             <ul>
-                                <li>Tăng dần</li>
-                                <li>Giảm dần</li>
+                                <li value="asc">Tăng dần</li>
+                                <li value="dec">Giảm dần</li>
                             </ul>
                         </div>
                     </div>
                 </div>
                 <div class="text-right col-xl-2 ">
-                    <a href="/" class="btn btn-search">
+                    <button class="btn btn-search" id="search">
                         <span>Tìm kiếm</span>
-                    </a>
+                    </button>
                 </div>
             </div>
         </div>
