--- a/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
@@ -16,11 +16,10 @@
     <link rel="stylesheet" th:href="@{/css/select2.min.css}">
     <script th:src="@{/js/public/select2.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
-          type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
+    <script th:src="@{/js/public/moment.min.js}"></script>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
-    <script src="https://rawgit.com/Marak/faker.js/master/examples/browser/js/faker.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -33,12 +32,11 @@
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Lớp</span>
-                        <select class="combobox searchable" id="classList">
-                        </select>
+                        <select class="combobox searchable" id="classList"></select>
                     </div>
-                    <div class="search-line" id="datetime">
+                    <div class="search-line">
                         <span>Ngày</span>
-                        <input type="date">
+                        <input type="date" class="searchable" id="datetime">
                     </div>
                 </div>
                 <div class="col-xl-6 d-inline-block"></div>
@@ -54,37 +52,7 @@
                 </a>
             </div>
         </div>
-        <div class="violation-by-date">
-            <div class="violation-description">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">
-                        <span class="font-500">Mô tả lỗi: </span>
-                        <span>Đổ rác xuống sàn khi thùng rác của Cty MTĐT chưa đầy hoặc đổ rác từ thùng rác của lớp vào thùng rác thanh niên.</span>
-                    </div>
-                    <p class="violation-note my-0">
-                        <span class="font-500">Ghi chú: </span>
-                        <span>A và B đi lại lộn xộn trong lớp</span></p>
-                </div>
-                <div class="violation-substract-grade">
-                    <span class="font-500">Điểm trừ: </span>
-                    <span>0.2</span>
-                </div>
-                <div class="violation-quantity">
-                    <span class="font-500">Số lần: </span>
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span class="font-500">Tổng điểm trừ: </span>
-                    <span>0.4</span>
-                </div>
-                <div class="violation-action">
-                    <a class="btn btn-danger" href="#editModal" data-toggle="modal">CHỈNH SỬA</a>
-                </div>
-            </div>
-        </div>
+        <div class="violation-by-date"></div>
     </div>
 </div>
 
@@ -92,56 +60,16 @@
 <div id="editModal" class="modal fade">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <form>
-                <div class="modal-header">
-                    <h4 class="modal-title">Trang chỉnh sửa</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <p class="font-500">Thứ 2 - 07/06/2020 - Lớp 10 Tin</p>
-                    <div class="ml-3">
-                        <p class="mb-1">
-                            <span class="font-500">Mô tả lỗi: </span>
-                            <span>Đi lại lộn xộn, làm việc riêng, ăn quà</span>
-                        </p>
-                        <p class="mb-1">
-                            <span class="font-500">Ghi chú: </span>
-                            <span class="text-red">A và B đi lại lộn xộn trong lớp</span>
-                        </p>
-                    </div>
-                    <div class="ml-3">
-                        <p class="mb-1">
-                            <span class="font-500">Điểm trừ: </span>
-                            <span class="substract">0.2</span>
-                        </p>
-                    </div>
-                    <div class="ml-3">
-                        <p class="mb-1 d-flex align-items-center">
-                            <span class="font-500">Số lần: </span>
-                            <span class="quantity d-flex ml-3">
-                                    <a role="button" class="btn-decrease"><i class="fa fa-minus" aria-hidden="true"></i></a>
-                                    <input class="quantity-input" type="number" value="0" min="0">
-                                    <a role="button" class="btn-increase"><i class="fa fa-plus" aria-hidden="true"></i></a>
-                                </span>
-                        </p>
-                    </div>
-                    <div class="ml-3">
-                        <p class="mb-1">
-                            <span class="font-500">Tổng điểm trừ: </span>
-                            <span class="total">0.4</span>
-                        </p>
-                    </div>
-                    <div class="form-group mx-3">
-                        <label class="font-500" for="reason">Lý do: </label>
-                        <textarea type="text" class="form-control" id="reason" placeholder="Lý do.."></textarea>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <input type="submit" class="btn btn-danger" data-toggle="modal" data-target="#confirmEdit"
-                           data-dismiss="modal" value="TẠO YÊU CẦU THAY ĐỔI">
-                    <input type="button" class="btn btn-primary" data-dismiss="modal" value="HỦY">
-                </div>
-            </form>
+            <div class="modal-header">
+                <h4 class="modal-title">Trang chỉnh sửa</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            </div>
+            <div class="modal-body"></div>
+            <div class="modal-footer">
+                <input type="button" class="btn btn-danger" data-toggle="modal"
+                       id="editModalBtn" data-dismiss="modal" value="TẠO YÊU CẦU THAY ĐỔI">
+                <input type="button" class="btn btn-primary" data-dismiss="modal" value="HỦY">
+            </div>
         </div>
     </div>
 </div>
@@ -154,25 +82,9 @@
                 <h4 class="modal-title">Xác nhận thay đổi</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             </div>
-            <div class="modal-body text-center">
-                <div class="panel-title d-flex justify-content-between">
-                    <div class="violationName">Đi lại lộn xộn</div>
-                    <div class="substract-grade">Điểm trừ: 0.2</div>
-                </div>
-                <div class="panel-body">
-                    <div class="note"><span class="title">Ghi chú: </span> <span
-                            class="info ml-4">A đi lại lộn xộn</span>
-                    </div>
-                    <div class="reason-change"><span class="title">Lý do thay đổi: </span> <span class="info ml-4">Sao đỏ chấm nhầm</span>
-                    </div>
-                    <div class="quantity"><span class="title">Số lần: </span> <span class="info ml-4">2 -> <span
-                            class="text-red font-500">1</span></span></div>
-                    <div class="totals"><span class="title">Tổng điểm trừ: </span> <span class="info ml-4">0.4 -> <span
-                            class="text-red font-500">0.2</span></span></div>
-                </div>
-            </div>
+            <div class="modal-body text-center"></div>
             <div class="modal-footer">
-                <input type="submit" class="btn btn-danger" data-toggle="modal" data-target="#saveSuccess"
+                <input type="submit" class="btn btn-danger" data-toggle="modal" id="confirmEditBtn"
                        data-dismiss="modal" value="XÁC NHẬN">
                 <input type="button" class="btn btn-primary" data-dismiss="modal" value="HỦY">
             </div>
@@ -184,12 +96,9 @@
 <div class="modal fade" tabindex="-1" role="dialog" id="saveSuccess">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
-            <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
-                <h5 id="message-reset">Tạo yêu cầu thay đổi thành công!</h5>
-            </div>
+            <div class="modal-body text-center"></div>
             <div class="modal-footer">
-                <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
+                <a href="violationListOfClass" class="btn btn-primary">ĐÓNG</a>
             </div>
         </div>
     </div>
