--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -27,6 +27,18 @@ a:hover {
     background: #35579c;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
 /*Header*/
 
 .myHeader {
@@ -1231,6 +1243,14 @@ fieldset .note {
     font-weight: 500;
 }
 
+.table-vertical-middle tbody tr td {
+    vertical-align: middle;
+    text-align: center;
+}
+.table-responsive-customer td:nth-of-type(2) {
+    max-width: 435px;
+
+}
 /*Responsive table max-width:650px*/
 @media screen and (max-width: 700px) {
     .table-wrapper {
@@ -1238,7 +1258,7 @@ fieldset .note {
     }
 
     .div-space {
-        display: none!important;
+        display: none !important;
     }
 
     .modal-body .panel-body,
@@ -1275,12 +1295,15 @@ fieldset .note {
         position: absolute;
         top: .75rem;
         border: none;
+        padding-left: 0;
+        padding-right: 0;
     }
 
     .table-responsive-customer td:nth-of-type(2) {
         display: block;
-        margin-left: 70px;
+        margin-left: 35px;
         border: none;
+        max-width: 100%;
 
     }
 
@@ -1289,12 +1312,13 @@ fieldset .note {
     }
 
     .table-responsive-customer td:nth-of-type(3) {
-        margin-left: 75px;
+        margin-left: 35px;
     }
 
     .table-responsive-customer td:nth-of-type(3),
     .table-responsive-customer td:nth-of-type(4) {
         display: inline-block;
+        text-align: left;
         border: none;
     }
 
@@ -1310,8 +1334,9 @@ fieldset .note {
 
     .table-responsive-customer td:nth-of-type(5) {
         display: block;
-        margin-left: 75px;
+        margin-left: 35px;
         border: none;
+        text-align: left;
     }
 
     .saveResult {
